ZumZumFinancials_Dev1/src/objects/Sales_Invoice_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Narrative__c</fullName>
        <label>Narrative</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice__c</fullName>
        <label>Sales Order</label>
        <referenceTo>Sales_Invoice__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <referenceTo>Tax_Rate__c</referenceTo>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Gross__c</fullName>
        <label>Total Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Net__c</fullName>
        <label>Total Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <displayFormat>SI-{00000}</displayFormat>
        <label>UID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Invoice Line Item</label>
    <nameField>
        <label>Sales Invoice Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>